--- a/lib/practice_web/templates/page/index.html.eex
+++ b/lib/practice_web/templates/page/index.html.eex
@@ -30,9 +30,10 @@
   <div class="column">
     <h2>Palindrome?</h2>
 
-    <p>TODO: Add a form here that checks if a string is a palindrome.</p>
-    <p>INPUT BOX</p>
-    <p>SUBMIT BUTTON</p>
+    <p>TODO: DONE. Add a form here that checks if a string is a palindrome.</p>
+    <%= form_for @conn, "/palindrome", fn f -> %>
+      <p>Enter word: <%= text_input f, :expr %></p>
+      <p><%= submit "Check Palindrome" %></p>
+    <% end %>
   </div>
 </div>
-
